[package]
name = "bwlat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.7", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
csv = "1.3.0"
futures = "0.3.29"
humantime = "2.1.0"
libc = "0.2.149"
nohash-hasher = "0.2.0"
ratatui = { version = "0.24.0", features = ["macros"] }
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.17"
